--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,14 @@ exclude = '''
 [tool.ruff.lint.isort]
 known_first_party = ["cgiar_root_volume_estimation"]
 force_sort_within_sections = true
+
+# Main pixi entry
+[tool.pixi.project]
+channels = ["conda-forge"]
+# This is your machine platform by default
+platforms = ["osx-arm64"]
+
+[tool.pixi.dependencies]
+pandas = ">=2.2.3,<3"
+ipython = ">=8.31.0,<9"
+python = ">=3.13.1,<3.14"
