--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,12 @@ force_sort_within_sections = true
 # Main pixi entry
 [tool.pixi.project]
 channels = ["conda-forge"]
-# This is your machine platform by default
-platforms = ["osx-arm64"]
+platforms = ["linux-64"]
+
+[tool.pixi.system-requirements]
+cuda = "12.0"
+
+
 
 [tool.pixi.dependencies]
 pandas = ">=2.2.3,<3"
