--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,3 +45,8 @@ cuda = "12.0"
 pandas = ">=2.2.3,<3"
 ipython = ">=8.31.0,<9"
 python = ">=3.13.1,<3.14"
+pytorch = ">=2.5.1,<3"
+pytest = ">=8.3.4,<9"
+matplotlib = ">=3.10.0,<4"
+black = ">=24.10.0,<25"
+torchvision = ">=0.20.1,<0.21"
