--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,3 +50,4 @@ pytest = ">=8.3.4,<9"
 matplotlib = ">=3.10.0,<4"
 black = ">=24.10.0,<25"
 torchvision = ">=0.20.1,<0.21"
+lightning = ">=2.5.0.post0,<3"
